--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
             opacity: 1;
             transform: translateY(0);
         }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            50% {
+                opacity: 0.8;
+                transform: scale(1.02);
+            }
+        }
+
+        .animate-pulse-custom {
+            animation: pulse 2s ease-in-out infinite;
+        }
     </style>
 </head>
 
@@ -260,40 +278,13 @@
                 <!-- Vertical Line -->
                 <div class="absolute left-8 md:left-[140px] top-0 bottom-0 w-0.5 bg-slate-200"></div>
 
-                <!-- 5:00 AM -->
-                <div class="relative z-10 mb-12 flex gap-8 items-start group reveal-on-scroll">
-                    <div class="hidden md:block w-[140px] text-right flex-shrink-0 pt-1 pr-8">
-                        <span
-                            class="text-2xl font-black text-slate-400 group-hover:text-brand-500 transition-colors font-serif block">5:00
-                            AM</span>
-                    </div>
-                    <div
-                        class="absolute left-8 md:left-[140px] w-4 h-4 rounded-full bg-brand-500 border-2 border-white ring-4 ring-brand-50 shadow-sm transform -translate-x-1/2 mt-2 z-20">
-                    </div>
-                    <div class="flex-1 pl-12 md:pl-0 pt-1">
-                        <span class="md:hidden text-lg font-black text-brand-600 font-serif block mb-2">5:00 AM</span>
-                        <h3 class="text-xl font-bold text-slate-800">Reporting & Gathering</h3>
-                        <p class="text-slate-600 mt-2">Attendance, luggage loading, and final prep before we roll out.
-                        </p>
-                        <div
-                            class="mt-3 inline-flex items-center gap-2 text-brand-600 font-medium bg-white border border-brand-100 px-3 py-1 rounded-full text-sm shadow-sm">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z">
-                                </path>
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                            </svg>
-                            <span>Beltola Tiniali</span>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- 5:30 AM -->
+
+                <!-- 5:00 AM -->
                 <div class="relative z-10 mb-12 flex gap-8 items-start group reveal-on-scroll">
                     <div class="hidden md:block w-[140px] text-right flex-shrink-0 pt-6 pr-8">
                         <span
-                            class="text-2xl font-black text-slate-400 group-hover:text-brand-500 transition-colors font-serif block">5:30
+                            class="text-2xl font-black text-slate-400 group-hover:text-brand-500 transition-colors font-serif block">5:00
                             AM</span>
                     </div>
                     <div
@@ -302,27 +293,10 @@
                     <div class="flex-1 pl-12 md:pl-0">
                         <div
                             class="glass bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-shadow border border-slate-100 group-hover:border-brand-200 relative group/card">
-                            <span class="md:hidden text-lg font-black text-brand-600 font-serif block mb-2">5:30
+                            <span class="md:hidden text-lg font-black text-brand-600 font-serif block mb-2">5:00
                                 AM</span>
 
-                            <!-- Refund Warning Popup (Desktop Hover) -->
-                            <div
-                                class="hidden md:block absolute -top-12 left-1/2 -translate-x-1/2 bg-red-500 text-white text-xs font-bold px-3 py-2 rounded-lg shadow-lg opacity-0 group-hover/card:opacity-100 transition-opacity duration-300 pointer-events-none w-max z-50">
-                                No Refund to anyone who misses the bus
-                                <div class="absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 text-red-500">▼
-                                </div>
-                            </div>
 
-                            <!-- Refund Warning (Mobile Inline) -->
-                            <div
-                                class="block md:hidden mb-3 text-red-500 text-xs font-bold bg-red-50 px-2 py-1 rounded border border-red-100 items-center gap-1 inline-flex w-full">
-                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
-                                    </path>
-                                </svg>
-                                No Refund if you miss the bus
-                            </div>
 
                             <h3 class="text-xl font-bold text-slate-800 flex items-center gap-2">
                                 <svg class="w-5 h-5 text-brand-500" fill="none" stroke="currentColor"
@@ -750,9 +724,10 @@
                 <h4 class="text-white font-bold uppercase tracking-wider mb-6 text-sm">Quick Recap</h4>
                 <ul class="space-y-4 text-sm">
                     <li class="flex justify-between border-b border-slate-800 pb-2">
-                        <span>Reporting</span>
-                        <span class="text-white">5:00 AM @ Beltola</span>
+                        <span>Departure</span>
+                        <span class="text-white">5:00 AM</span>
                     </li>
+
                     <li class="flex justify-between border-b border-slate-800 pb-2">
                         <span>Lunch</span>
                         <span class="text-white">11:30 AM</span>
@@ -768,6 +743,12 @@
             &copy; 2025 Picnic Itinerary. Designed with <span class="text-red-500">♥</span> for the family.
         </div>
     </footer>
+
+    <!-- Sticky Refund Banner -->
+    <div
+        class="fixed bottom-0 left-0 w-full bg-red-600 text-white text-center py-3 font-bold z-50 shadow-lg uppercase tracking-wide text-sm md:text-base animate-pulse-custom">
+        No Refund at any condition
+    </div>
 
     <script>
         // Reveal on scroll observer
